# poetry-lambda

./: readme.md
lambda/lambda/: lambda.py  pyproject.toml
terraform/: main.tf  providers.tf
