[tool.poetry]
name = "example_lambda"  # no hypens `-`!
version = "0.1.0"
description = "Lambda based on a Poetry pyproject"
authors = ["Ruben Cronie <rubencronie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
